# ImageStore

./: .gitignore  claude.md  package-lock.json
.github/workflows/: release.yml
client/: .tool-versions  CLAUDE.md  README.md  astro.config.mjs  launcher.mjs  package-lock.json  package.json
client/electron/: main.cjs
client/public/: generate_shapes.py
client/scripts/: package.mjs
client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src/components/: AppContainer.svelte  CaseNumberInput.svelte  ImageSorter.svelte  ImageSorter.svelte.ts  PatientsTable.svelte  SettingsPanel.svelte  ThumbnailGrid.svelte
client/src/components/CaseNumberInput/: CaseNumberAutocomplete.svelte  CaseNumberInput.svelte  CaseNumberInput.svelte.ts  ConsentRadioGroup.svelte  DateOfBirthInput.svelte  PathPreviewPanel.svelte  PatientNameFields.svelte
client/src/components/SettingsPanel/: CrudListTab.svelte  FactoryResetModal.svelte  FilePickerModal.svelte  SettingsFooter.svelte  SettingsMiscTab.svelte  SettingsPanel.svelte  SettingsPanel.svelte.ts  SettingsStorageTab.svelte
client/src/layouts/: Layout.astro
client/src/lib/: hash.test.ts  hash.ts  manifest.test.ts  manifest.ts  patients.test.ts  patients.ts  procedures.test.ts  procedures.ts  settings.test.ts  settings.ts  sort-image.test.ts  sort-image.ts  surgeons.test.ts  surgeons.ts
client/src/pages/: index.astro
scripts/: README.md  download-node.mjs  generate_test_images.py
server/: CLAUDE.md
(+9 files in other folders)
