[package]
name = "imagestore"
version = "0.2.0"
description = "Medical image sorting and patient management"
authors = ["JM <me@josephmyers.dev>"]
license = ""
repository = "https://github.com/BigJayToDaIzo/ImageStore"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "imagestore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["blocking"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2"
